--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@
 							if (match) {
 								partMoving = condition.partMoving;
 								directionMoving = condition.directionMoving;
+								setTimeout(resetVariables, 4000); // 3000 milliseconds = 3 seconds
 							}
 						});
 
