--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1164,7 +1164,7 @@ With a sense of purpose, Hachi feels ready to embark on an adventure that will d
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_act2_03false&quot; and $hachi_part_mov!== &quot;none&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_act2_04/ Each character will teach Hachi a bit more about Buro: He always rides the same tram along with Lina, who works at the bank. He has always been secretly attracted to her. At the stairs of the building, he likes to buy a pack of gum and talk about war stories with the attendant, he always throes one coin to the fountain hoping for one of his many wishes to come true. It seems that the wishing fairy might finally grante one. Hachi starts walking... where is he going now?&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_act2_04/ Each character will teach Hachi a bit more about Buro: He always rides the same tram along with Lina, who works at the bank. He has always been secretly attracted to her. At the stairs of the building, he likes to buy a pack of gum and talk about war stories with the attendant, he always throes one coin to the fountain hoping for one of his many wishes to come true. It seems that the wishing fairy might finally grante one. Hachi starts walking... where is he going now?&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_act2_04false&quot; and $hachi_part_mov!== &quot;none&quot;&gt;&gt;
