--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -846,14 +846,14 @@ Loading variables...
 &lt;div id=&quot;bottomContainer&quot;&gt;
 	&lt;div id=&quot;avatar_story&quot;&gt;
     	&lt;&lt;liveblock&gt;&gt;
-        &lt;&lt;if $avatar_status == Online&gt;&gt;
+        &lt;&lt;if $avatar_status == &quot;Online&quot;&gt;&gt;
 		&lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
         &lt;&lt;/if&gt;&gt;
         &lt;&lt;/liveblock&gt;&gt;
 	&lt;/div&gt;
 	&lt;div id=&quot;hachi_story&quot;&gt;
         &lt;&lt;liveblock&gt;&gt;
-        &lt;&lt;if $hachi_status == Online&gt;&gt;
+        &lt;&lt;if $hachi_status == &quot;Online&quot;&gt;&gt;
        	 &lt;&lt;include &quot;hachi_act1&quot;&gt;&gt;
          &lt;&lt;/if&gt;&gt;
         &lt;&lt;/liveblock&gt;&gt;
