--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -842,7 +842,7 @@ Loading variables...
       &lt;div id=&quot;refreshArea&quot;&gt;	&lt;/div&gt;
 &lt;/div&gt;
 
-&lt;&lt;if $avatar_status == &quot;Online&quot; and $hachi_status==&quot;Online&gt;&gt;
+&lt;&lt;if $avatar_status == &quot;Online&quot; and $hachi_status==&quot;Online&quot;&gt;&gt;
 &lt;div id=&quot;bottomContainer&quot;&gt;
 	&lt;div id=&quot;avatar_story&quot;&gt;
           &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
