--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 								}
 								// Clear the buffer after a match
 								movementBuffer = [];
-								setTimeout(resetVariables, 8000); // 3000 milliseconds = 3 seconds
+								setTimeout(resetVariables(patternMovement), 4000); // 3000 milliseconds = 3 seconds
 								return;
 							}
 						}
@@ -613,11 +613,27 @@
 					}
 				}
 
-				function resetVariables() {
-					directionMoving = "none";
-					partMoving = "none";
-					patternMovement = "none";
+				function resetVariables(patternMovement) {
+					if (patternMovement !== undefined) {
+						directionMoving = "none";
+						partMoving = "none";
+						patternMovement = "none";
+					} else {
+						directionMoving = "none";
+						partMoving = "none";
+					}
+					// Your code to reset the variables goes here
+					// For example:
+					// directionMoving = directionMoving;
+					// partMoving = partMoving;
+					// patternMovement = patternMovement;
 				}
+
+				// function resetVariables() {
+				// 	directionMoving = "none";
+				// 	partMoving = "none";
+				// 	patternMovement = "none";
+				// }
 
 				// Function to check if a pattern exists in the movement buffer
 				function checkPatternInBuffer(pattern) {
