--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 								}
 								// Clear the buffer after a match
 								movementBuffer = [];
-								setTimeout(resetVariables("patternMovement"), 4000); // 3000 milliseconds = 3 seconds
+								setTimeout(resetVariables(patternMovement), 4000); // 3000 milliseconds = 3 seconds
 								return;
 							}
 						}
