--- a/index.html
+++ b/index.html
@@ -547,7 +547,6 @@
 							if (match) {
 								partMoving = condition.partMoving;
 								directionMoving = condition.directionMoving;
-								setTimeout(resetVariables, 8000); // 3000 milliseconds = 3 seconds
 							}
 						});
 
@@ -617,6 +616,11 @@
 					directionMoving = "none";
 					partMoving = "none";
 					patternMovement = "none";
+				}
+
+				function resetMovementVariables() {
+					directionMoving = "none";
+					partMoving = "none";
 				}
 
 				// Function to check if a pattern exists in the movement buffer
