--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 				function resetVariables() {
 					directionMoving = "none";
 					partMoving = "none";
-					patternMovement = "none";
+					//patternMovement = "none";
 				}
 
 				// Function to check if a pattern exists in the movement buffer
