--- a/index.html
+++ b/index.html
@@ -602,8 +602,8 @@
 								}
 								// Clear the buffer after a match
 								movementBuffer = [];
+								setTimeout(resetVariables, 4000); // 3000 milliseconds = 3 seconds
 								return;
-								setTimeout(resetVariables(), 4000); // 3000 milliseconds = 3 seconds
 							}
 						}
 					} catch (error) {
@@ -614,7 +614,7 @@
 				function resetVariables() {
 					directionMoving = "none";
 					partMoving = "none";
-					//patternMovement = "none";
+					patternMovement = "none";
 				}
 
 				// Function to check if a pattern exists in the movement buffer
