--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@
 							if (match) {
 								partMoving = condition.partMoving;
 								directionMoving = condition.directionMoving;
+								setTimeout(() => resetVariables(false), 4000);
 							}
 						});
 
@@ -614,7 +615,10 @@
 				function resetVariables() {
 					directionMoving = "none";
 					partMoving = "none";
-					patternMovement = "none";
+
+					if (resetAll) {
+						patternMovement = "none";
+					}
 				}
 
 				// Function to check if a pattern exists in the movement buffer
