--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 					}
 				}
 
-				function resetVariables() {
+				function resetVariables(resetAll = true) {
 					directionMoving = "none";
 					partMoving = "none";
 
