--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -857,7 +857,7 @@ Loading variables...
           &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
 	&lt;/div&gt;
 	&lt;div id=&quot;hachi_story&quot;&gt;
-           &lt;&lt;include &quot;hachi_act2_transition&quot;&gt;&gt;	
+           &lt;&lt;include &quot;hachi_act2&quot;&gt;&gt;	
 	&lt;/div&gt;
 &lt;/div&gt;
 &lt;&lt;/if&gt;&gt;
